creacion e inicio de la sección main

--- a/menu.html
+++ b/menu.html
@@ -72,6 +72,25 @@
             </nav>
         </header>
 
+
+        <main>
+
+            <section id="todaysmenu" class="container">
+                <h2>Today´s <span>Menu</span></h2>
+                <div class="underline">
+                    <hr noshade="noshade" />
+                    <span>X</span>>
+                    <nav>
+                        <article></article>
+                        <article></article>
+                        <article></article>
+                        <article></article>
+                    </nav>
+            </section>
+            <section></section>
+
+        </main>
+
         <footer>
 
             <div class="container">
