Fin del main>section1

--- a/menu.html
+++ b/menu.html
@@ -81,10 +81,14 @@
                     <hr noshade="noshade" />
                     <span>X</span>>
                     <nav>
-                        <article></article>
-                        <article></article>
-                        <article></article>
-                        <article></article>
+                        <div class="column">
+                            <ul>
+                                <li><a href="">Breakfast</a></li>
+                                <li><a href="">Lunch</a></li>
+                                <li><a href="">Dinner</a></li>
+                                <li><a href="">Others</a></li>
+                            </ul>
+                        </div>
                     </nav>
             </section>
             <section></section>
