--- a/menu.html
+++ b/menu.html
@@ -91,7 +91,57 @@
                         </div>
                     </nav>
             </section>
-            <section></section>
+
+            <section>
+
+                <div>
+
+                    <h3>Today´s Hot Offers</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Numquam consequuntur earum amet</p>
+
+                    <div>
+
+                        <img src="images/images/t1.jpg" alt="">
+                        <div class="row">
+                            <div>
+                                <h3>Chicken Burguer With Cheese and Butter</h3>
+                            </div>
+                            <div>95$</div>
+                        </div>
+                        <p>Vegetable and chicken burguer with extra butter</p>
+
+                    </div>
+
+                    <div>
+                        <a href="" class="boton">
+                            Order Now
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </a>
+                    </div>
+
+                    <article>
+
+                        <img src="images/images/t4.jpg" alt="">
+                        <div class="row">
+                            <div>
+                                <h3>Coffee and Tea with Milk and Chocolate</h3>
+                            </div>
+                            <div>$30</div>
+                        </div>
+                        <p>Vegetable and chicken burguer with extra butter</p>
+                        <a href="" class="boton">
+                            Order Now
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </a>
+
+                        <a href="arriba">^</a>
+
+                    </article>
+                </div>
+
+
+            </section>
 
         </main>
 
