--- a/blog.html
+++ b/blog.html
@@ -60,8 +60,8 @@
                         <div></div>
                     </div>
                     <ul>
-                        <li><a class="activo" href="">Home</a></li>
-                        <li><a href="">Blog</a></li>
+                        <li><a href="">Home</a></li>
+                        <li><a class="activo" href="">Blog</a></li>
                         <li><a href="">Menú</a></li>
                         <li><a href="">Item4</a></li>
                         <li><a href="">Item5</a></li>
@@ -73,9 +73,73 @@
         </header>
 
 
-        <main>
+        <main id="blog">
 
             <!--empezar seccion-->
+
+            <section id="ourblogs" class="container">
+                <h2>Our <span>Blogs</span></h2>
+                <div class="underline">
+                    <hr noshade="noshade" />
+                    <span>X</span>
+
+            </section>
+
+            <section>
+                <article>
+
+                    <div>
+                        <img src="images/images/news3.jpg" alt="">
+                        <div>
+                            <p>05 Mar</p>
+                        </div>
+
+                    </div>
+
+                    <h2>Our Weekly Best Food</h2>
+                    <h3>Posted by Rovers</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Animi, eum?</p>
+
+                    <div>
+                        <a href="" class="boton">
+                            Read more
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </a>
+                    </div>
+
+
+
+                </article>
+
+                <article>
+
+
+                    <div>
+                        <img src="images/images/news4.jpg" alt="">
+                        <div>
+                            <p>17 Feb</p>
+                        </div>
+                    </div>
+
+                    <h2>Top Five Reasons to Visit</h2>
+                    <h3>Posted by Rovers</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Animi, eum?</p>
+
+                    <div>
+                        <a href="" class="boton">
+                            Read more
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </a>
+                    </div>
+
+                </article>
+
+
+            </section>
+
+
 
 
 
