a falta de detalles

--- a/blog.html
+++ b/blog.html
@@ -82,60 +82,85 @@
                 <div class="underline">
                     <hr noshade="noshade" />
                     <span>X</span>
+                </div>
 
-            </section>
+                <div class="row">
 
-            <section>
-                <article>
 
-                    <div>
-                        <img src="images/images/news3.jpg" alt="">
-                        <div>
-                            <p>05 Mar</p>
+                    <article>
+
+                        <div class="foto">
+                            <img src="images/images/news3.jpg" alt="">
+                            <div class="fecha">
+                                <p>05 Mar</p>
+                            </div>
+
                         </div>
 
-                    </div>
+                        <h2>Our Weekly Best Food</h2>
+                        <h4>Posted by Rovers</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Animi, eum?</p>
 
-                    <h2>Our Weekly Best Food</h2>
-                    <h3>Posted by Rovers</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Animi, eum?</p>
-
-                    <div>
-                        <a href="" class="boton">
-                            Read more
-                            <i class="fas fa-long-arrow-alt-right"></i>
-                        </a>
-                    </div>
-
-
-
-                </article>
-
-                <article>
-
-
-                    <div>
-                        <img src="images/images/news4.jpg" alt="">
                         <div>
-                            <p>17 Feb</p>
+                            <a href="" class="enlace">
+                                Read more
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </a>
                         </div>
-                    </div>
 
-                    <h2>Top Five Reasons to Visit</h2>
-                    <h3>Posted by Rovers</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Animi, eum?</p>
+                    </article>
 
-                    <div>
-                        <a href="" class="boton">
-                            Read more
-                            <i class="fas fa-long-arrow-alt-right"></i>
-                        </a>
-                    </div>
+                    <article>
 
-                </article>
 
+                        <div class="foto">
+                            <img src="images/images/news4.jpg" alt="">
+                            <div class="fecha">
+                                <p>17 Feb</p>
+                            </div>
+                        </div>
+
+                        <h2>Top Five Reasons to Visit</h2>
+                        <h4>Posted by Rovers</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Animi, eum?</p>
+
+                        <div>
+                            <a href="" class="enlace">
+                                Read more
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </a>
+                        </div>
+
+                    </article>
+
+                    <article>
+
+
+                        <div class="foto">
+                            <img src="images/images/news1.jpg" alt="">
+                            <div class="fecha">
+                                <p>28 Feb</p>
+                            </div>
+                        </div>
+
+                        <h2>Restaurant´s Inside Design</h2>
+                        <h4>Posted by Rovers</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Animi, eum?</p>
+
+                        <div>
+                            <a href="" class="enlace">
+                                Read more
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </a>
+                        </div>
+
+                    </article>
+
+
+                </div>
 
             </section>
 
