--- a/menu.html
+++ b/menu.html
@@ -73,74 +73,101 @@
         </header>
 
 
-        <main>
-
-            <section id="todaysmenu" class="container">
+        <main id="menu">
+            <section>
                 <h2>Today´s <span>Menu</span></h2>
                 <div class="underline">
                     <hr noshade="noshade" />
-                    <span>X</span>>
-                    <nav>
-                        <div class="column">
-                            <ul>
-                                <li><a href="">Breakfast</a></li>
-                                <li><a href="">Lunch</a></li>
-                                <li><a href="">Dinner</a></li>
-                                <li><a href="">Others</a></li>
-                            </ul>
-                        </div>
-                    </nav>
-            </section>
-
-            <section>
-
-                <div>
-
-                    <h3>Today´s Hot Offers</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Numquam consequuntur earum amet</p>
-
-                    <div>
-
-                        <img src="images/images/t1.jpg" alt="">
-                        <div class="row">
-                            <div>
-                                <h3>Chicken Burguer With Cheese and Butter</h3>
-                            </div>
-                            <div>95$</div>
-                        </div>
-                        <p>Vegetable and chicken burguer with extra butter</p>
-
-                    </div>
-
-                    <div>
-                        <a href="" class="boton">
-                            Order Now
-                            <i class="fas fa-long-arrow-alt-right"></i>
-                        </a>
-                    </div>
-
-                    <article>
-
-                        <img src="images/images/t4.jpg" alt="">
-                        <div class="row">
-                            <div>
-                                <h3>Coffee and Tea with Milk and Chocolate</h3>
-                            </div>
-                            <div>$30</div>
-                        </div>
-                        <p>Vegetable and chicken burguer with extra butter</p>
-                        <a href="" class="boton">
-                            Order Now
-                            <i class="fas fa-long-arrow-alt-right"></i>
-                        </a>
-
-                        <a href="arriba">^</a>
-
-                    </article>
+                    <span>X</span>
                 </div>
+                <div class="row">
+
+                    <div id="todaysmenu" class="container">
+
+                        <nav>
+                            <div class="column">
+                                <ul>
+                                    <li><a href="">Breakfast</a></li>
+                                    <li><a href="">Lunch</a></li>
+                                    <li><a href="">Dinner</a></li>
+                                    <li><a href="">Others</a></li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+
+                    <div>
+
+                        <div>
+
+                            <h3>Today´s Hot Offers</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Numquam consequuntur earum amet</p>
+
+                            <div class="foto">
+
+                                <img src="images/images/t1.jpg" alt="">
+                                <div class="row">
+                                    <div>
+                                        <h3>Chicken Burguer With Cheese and Butter</h3>
+                                    </div>
+                                    <div class="precio">95$</div>
+                                </div>
+                                <p>Vegetable and chicken burguer with extra butter</p>
+
+                            </div>
+
+                            <div>
+                                <a href="" class="enlace">
+                                    Order Now
+                                    <i class="fas fa-long-arrow-alt-right"></i>
+                                </a>
+                            </div>
+
+                            <div class="foto">
+
+                                <img src="images/images/t4.jpg" alt="">
+                                <div class="row">
+                                    <div>
+                                        <h3>Coffee and Tea with Milk and Chocolate</h3>
+                                    </div>
+                                    <div class="precio">$30</div>
+                                </div>
+                                <p>Vegetable and chicken burguer with extra butter</p>
+                                <a href="" class="enlace">
+                                    Order Now
+                                    <i class="fas fa-long-arrow-alt-right"></i>
+                                </a>
 
 
+                            </div>
+
+                            <div class="foto">
+
+                                <img src="images/images/t3.jpg" alt="">
+                                <div class="row">
+                                    <div>
+                                        <h3>Hot Pizza with Extra Cheese and Butter</h3>
+                                    </div>
+                                    <div class="precio">$65</div>
+                                </div>
+                                <p>Vegetable and chicken burguer with extra butter</p>
+                                <a href="" class="enlace">
+                                    Order Now
+                                    <i class="fas fa-long-arrow-alt-right"></i>
+                                </a>
+                                <div class="arriba">
+                                    <a href="#top">
+                                        <i class="fas fa-chevron-up"></i>>
+                                    </a>
+                                </div>
+
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
             </section>
 
         </main>
