--- a/menu.html
+++ b/menu.html
@@ -94,79 +94,118 @@
                                 </ul>
                             </div>
                         </nav>
-                    </div>
-
-                    <div>
-
-                        <div>
-
+                        <div class="hotoffers">
                             <h3>Today´s Hot Offers</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Numquam consequuntur earum amet</p>
-
-                            <div class="foto">
-
-                                <img src="images/images/t1.jpg" alt="">
-                                <div class="row">
-                                    <div>
-                                        <h3>Chicken Burguer With Cheese and Butter</h3>
-                                    </div>
-                                    <div class="precio">95$</div>
-                                </div>
-                                <p>Vegetable and chicken burguer with extra butter</p>
-
+                            <div class="underline">
+                                <hr noshade="noshade" />
                             </div>
 
-                            <div>
-                                <a href="" class="enlace">
-                                    Order Now
-                                    <i class="fas fa-long-arrow-alt-right"></i>
-                                </a>
-                            </div>
-
-                            <div class="foto">
-
-                                <img src="images/images/t4.jpg" alt="">
-                                <div class="row">
-                                    <div>
-                                        <h3>Coffee and Tea with Milk and Chocolate</h3>
-                                    </div>
-                                    <div class="precio">$30</div>
-                                </div>
-                                <p>Vegetable and chicken burguer with extra butter</p>
-                                <a href="" class="enlace">
-                                    Order Now
-                                    <i class="fas fa-long-arrow-alt-right"></i>
-                                </a>
-
-
-                            </div>
-
-                            <div class="foto">
-
-                                <img src="images/images/t3.jpg" alt="">
-                                <div class="row">
-                                    <div>
-                                        <h3>Hot Pizza with Extra Cheese and Butter</h3>
-                                    </div>
-                                    <div class="precio">$65</div>
-                                </div>
-                                <p>Vegetable and chicken burguer with extra butter</p>
-                                <a href="" class="enlace">
-                                    Order Now
-                                    <i class="fas fa-long-arrow-alt-right"></i>
-                                </a>
-                                <div class="arriba">
-                                    <a href="#top">
-                                        <i class="fas fa-chevron-up"></i>>
-                                    </a>
-                                </div>
-
+                            <div class="parrafo">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    <br>
+                                    Numquam consequuntur earum amet.</p>
                             </div>
                         </div>
+                    </div>
 
+                    <div class="platos">
+
+                        <div class="foto">
+
+                            <div class="row">
+                                <div class="imagen">
+                                    <img src="images/images/t1.jpg" alt="">
+                                </div>
+
+                                <div class="texto">
+
+                                    <div class="preciocomida">
+
+                                        <div class="descripcion">
+                                            <h3>Chicken Burguer With Cheese and Butter</h3>
+                                        </div>
+                                        <div class="precio">95$</div>
+
+                                    </div>
+
+                                    <p>Vegetable and chicken burguer with extra butter</p>
+                                    <div>
+                                        <a href="" class="enlace">
+                                            Order Now
+                                            <i class="fas fa-long-arrow-alt-right"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="foto">
+
+                            <div class="row">
+                                <div class="imagen">
+                                    <img src="images/images/t4.jpg" alt="">
+                                </div>
+
+                                <div class="texto">
+
+                                    <div class="preciocomida">
+
+                                        <div class="descripcion">
+                                            <h3>Coffee and Tea with Milk and Chocolate</h3>
+                                        </div>
+                                        <div class="precio">30$</div>
+                                    </div>
+
+                                    <p>Vegetable and chicken burguer with extra butter</p>
+                                    <div>
+                                        <a href="" class="enlace">
+                                            Order Now
+                                            <i class="fas fa-long-arrow-alt-right"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="foto">
+
+                            <div class="row">
+                                <div class="imagen">
+                                    <img src="images/images/t3.jpg" alt="">
+                                </div>
+
+                                <div class="texto">
+
+                                    <div class="preciocomida">
+
+                                        <div class="descripcion">
+                                            <h3>Hot Pizza With Extra Cheese and Butter</h3>
+                                        </div>
+
+                                        <div class="precio">65$</div>
+
+                                    </div>
+
+                                    <p>Vegetable and chicken burguer with extra butter</p>
+                                    <div>
+                                        <a href="" class="enlace">
+                                            Order Now
+                                            <i class="fas fa-long-arrow-alt-right"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
 
                     </div>
+
+                    <a href="" class="arriba">
+                        <i class="fas fa-chevron-up"></i>
+                    </a>
+
                 </div>
             </section>
 
