--- a/menu.html
+++ b/menu.html
@@ -202,9 +202,13 @@
 
                     </div>
 
-                    <a href="" class="arriba">
-                        <i class="fas fa-chevron-up"></i>
-                    </a>
+                    <div>
+
+                        <a href="" class="arriba">
+                            <i class="fas fa-chevron-up"></i>
+                        </a>
+
+                    </div>
 
                 </div>
             </section>
